--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ NODE_ENV=development
 APP_URL=http://${HOST}:${PORT}
 CACHE_VIEWS=false
 APP_KEY=sg5UPQ0RCwbGRh71uXQyksgZPxeWyCmf
-MONGO_CONNECTION_STRING=mongodb+srv://sf_sakti:Yoo12345@sf.wd721.mongodb.net/sample_analytics?authSource=admin&replicaSet=atlas-11a14l-shard-0&readPreference=primary&appname=MongoDB%20Compass&ssl=true
+MONGO_CONNECTION_STRING=mongodb+srv://sf_sakti:*******@sf.wd721.mongodb.net/sample_analytics?authSource=admin&replicaSet=atlas-11a14l-shard-0&readPreference=primary&appname=MongoDB%20Compass&ssl=true
 DB_CONNECTION=mongodb
 MONGO_HOST=f.wd721.mongodb.net/test
 MONGO_PORT=27017
